fix horizontal oveflow on mobile for pokemon search bar

--- a/portfolio/src/app/projects/pokemon/pokemon-team-builder.component.scss
+++ b/portfolio/src/app/projects/pokemon/pokemon-team-builder.component.scss
@@ -127,6 +127,8 @@ span {
 
   .search-container {
     flex-wrap: nowrap;
+    overflow-x: auto;
+    margin-right: 3%;
   }
 
   .search-by-name {
